manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoui
  template:
    metadata:
      name: todo-ui-pod
      labels:
        app: todoui
    spec:
      containers:
      - name: todoui-container
        image: todoacr001.azurecr.io/todoui:v28
        ports:
        - containerPort: 80
