manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todo-ui-pod
  labels:
    app: todo
spec:
  containers:
    - name: todo-ui-container
      image: practice30.azurecr.io/todoui:v14
      ports:
        - containerPort: 80
