manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoui-service
spec:
  type: ClusterIP
  selector:
    app: todoui
  ports:
    - protocol: TCP
      port: 80  # service ka port jis par listen karega
      targetPort: 80  #container port
